<resources>
    <string name="app_name">CoachMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="my_coachs">My coaches</string>
    <string name="my_trainees">My trainees</string>
    <string name="pending_coach_request">Pending requests to new coaches</string>
    <string name="pending_trainee_request">Pending requests from new trainees</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect">Incorrect credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="display_name">Display Name</string>
    <string name="connect">Connect</string>
    <string name="search_hint">Search trainer..</string>
    <string name="search_group_hint">Search group…</string>
    <string name="search_text">Search</string>
    <string name="all_sports">All sports</string>
    <string name="all_levels">All levels </string>
    <string name="no_coach_found">No coach found</string>

    <string name="no_group_found">No group found</string>

    <string name="no_connectivity">No connection available</string>
    <string name="retry">Retry</string>
    <string name="pin_message">Pin message</string>
    <string name="unpin_message">Unpin message</string>


    <plurals name="user_age">
        <item quantity="one">%1$d year old</item>
        <item quantity="other">%1$d years old</item>
    </plurals>


    <string name="separator_strings">%1$s - %2$s</string>
    <string name="coaching_invitation_trainee_title">You sent %1$s a coaching demand</string>
    <string name="coaching_invitation_coach_title">%1$s sent you a coaching demand</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="end_relation">End relation</string>
    <string name="add_group">Add group</string>
    <string name="create_group">Create group</string>
    <string name="request_sent">Your request has been sent successfully!</string>
    <string name="request_error">An error occurred while processing your request!</string>
    <string name="request_refused">You request has been refused by the coach.</string>
    <string name="send_request">Send request</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <string name="activity_relation_name">Relation</string>
    <string name="first_launch_bkg_cd">First launch tutorial background</string>
    <string name="send_message">Send</string>


    <!-- Notification -->
    <string name="notif_coaching_accept">%1$s has accepted your coaching request</string>
    <string name="notif_coaching_refuse">%1$s has refused your coaching request</string>
    <string name="notif_coaching_end">%1$s has canceled your coaching request</string>
    <string name="notif_coaching_new">%1$s sent you a coaching request</string>
    <string name="notif_group_join">%2$s asked to join %1$s</string>
    <string name="notif_group_invite">You have been invited in %1$s</string>
    <string name="notif_group_join_accepted">You have been accepted in %1$s</string>
    <string name="notif_content_event">%1$d new events</string>
    <plurals name="notif_summary_event">
        <item quantity="one">+ %1$d event …</item>
        <item quantity="other">+ %1$d events …</item>
    </plurals>
    <string name="notif_content_message">%1$d new messages</string>
    <plurals name="notif_summary_message">
        <item quantity="one">+ %1$d message …</item>
        <item quantity="other">+ %1$d messages …</item>
    </plurals>
    <!-- END Notification -->

    <string name="user_profile_picture">User profile picture</string>
    <string name="message_pinned">Message pinned</string>
    <string name="message_unpinned">Message unpinned</string>

    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="pick_date">Select birthdate</string>
    <string name="city">City</string>
    <string name="agree_to_coach">I want to coach others</string>
    <string name="register">Register</string>
    <string name="description">Describe yourself and why you are here</string>
    <string name="title_register_activity">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_failed">Register request failed</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="sign_up">Sign up</string>
    <string name="not_registered_question">Not registered yet ?</string>
    <string name="select_sport">Select sport</string>
    <string name="select_level">Select level</string>
    <string name="label_register_level_list">Select your level in each sport you practice</string>
    <string name="profile_accept_coaching">Accept to coach</string>
    <string name="profile_not_accept_coaching">Refuse to coach</string>
    <string name="profile_description">Description</string>
    <string name="profile_sports">Sports</string>
    <string name="title_activity_group">Group</string>
    <string name="created_on">"Created on %1$s"</string>
    <string name="members">Members</string>
    <string name="pending_members">Pending members</string>
    <string name="groups">My groups</string>
    <string name="invitations">My invitations</string>
    <string name="picture">Picture</string>
    <string name="nav_blog_post_new">New blog post</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>

    <string name="post_preview">Preview</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Short description</string>
    <string name="prompt_content">Content</string>
    <string name="post_create">Create Post</string>
    <string name="activity_blog_post_new">New Blog Post</string>
    <string name="cannot_connect_server">Server not reachable, please check you network connection</string>
    <string name="activity_send_request">Send Request</string>

    <!-- Empty list placeholder -->
    <string name="relations_list_empty_title">You don\'t have coaching relations.</string>
    <string name="relations_list_empty_desc">Search potentials coaches or wait requests from trainees to improve their skills !\n You need to be connected to send a request or receive one.</string>
    <string name="group_list_empty_title">You are not part of any group.</string>
    <string name="group_list_empty_desc">Search groups or create yours to share your skills and your training sessions with others !\n You need to be connected to join or create a group.</string>
    <string name="message_list_empty_title">No messages to display</string>
    <string name="message_pinned_list_empty_title">No messages pinned</string>
    <string name="message_pinned_list_empty_desc">To pin a message, long click on the message and select the pin option.</string>

    <string name="private_group">This group is private</string>
    <string name="name">Name</string>

    <string name="search_place">Search place…</string>
    <string name="nav_share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_disconnect">Disconnect</string>
    <string name="nav_about">About</string>

    <string name="description_group">Describe your group</string>
    <string name="leave_group">Leave group</string>
    <string name="demand_sent">Demand successfully sent to the group</string>
    <string name="leave_group_success">You left the group with success</string>
    <string name="not_connected">You are not connected</string>
    <string name="group_private">This group is private</string>
    <string name="already_in_group">You are already in the group or asked to join it</string>
    <string name="unknown_error">An error occurred</string>
    <string name="not_in_group">You are not in the group</string>
    <string name="leave_admin">An admin cannot leave the group</string>

    <string name="attach_file">Attach file</string>
    <string name="message_image">Message image</string>

    <string name="first_launch_continue">Continue</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="display_name_empty">Display name cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="city_empty">City cannot be empty</string>
    <string name="same_level_selected">You cannot have two levels in the same sport</string>
    <string name="joins">My join requests</string>
    <string name="logo">logo</string>
    <string name="personal_information">Personal Information</string>
    <string name="levels">Levels</string>
    <string name="add_level">Add level</string>
    <string name="remove_level">Remove level</string>
    <string name="sports">Sports</string>
    <string name="add_sport">Add sport</string>
    <string name="remove_sport">Remove sport</string>
    <string name="about_content">
        This non-profit application was developed by six students from INSA Lyon for a university
        project. As a large scale use would require a significant investment of time and money, it
        has been decided to limit the app to a demonstrative use.\n\n
        We hope you enjoy the app.
    </string>
    <string name="title_about_activity">About</string>
    <string name="contributors">Contributors :</string>

</resources>
