<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/logo"
            android:src="@drawable/img_runners_timer" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/white" />


        <LinearLayout
            android:id="@+id/register_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/section_margin_top"
                android:text="@string/personal_information"
                android:textColor="@color/white" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_24dp"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_person_24dp"
                    android:hint="@string/display_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_24dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_24dp"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mail_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_mail_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/register_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/ic_location_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_location_24dp"
                android:ems="10"
                android:hint="@string/city"
                android:textColor="@color/light_grey" />

            <Button
                android:id="@+id/register_date_button"
                android:drawableLeft="@drawable/ic_cake_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_cake_24dp"
                style="@style/Platform.Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:textColor="@color/light_grey" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_subject_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_subject_24dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textColor="@color/light_grey" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/register_is_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_to_coach"
                android:textColor="@color/light_grey"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/section_margin_top"
                android:text="@string/picture"
                android:textColor="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_profile_image"
                android:layout_width="@dimen/profile_picture_size"
                android:layout_height="@dimen/profile_picture_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_image_white_bkg"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_96dp_accent" />


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/section_margin_top"
                android:text="@string/sports"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/register_levels_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_add_level_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/add_sport"
                    android:textColor="@color/light_grey" />

                <Button
                    android:id="@+id/register_remove_level_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/remove_sport"
                    android:textColor="@color/light_grey" />

            </LinearLayout>


            <Button
                android:id="@+id/register_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/section_margin_top"
                android:text="@string/sign_up" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>