<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/list_padding_top_bottom"
    android:layout_marginLeft="@dimen/list_padding_left_right"
    android:layout_marginRight="@dimen/list_padding_left_right"
    android:layout_marginTop="@dimen/list_padding_top_bottom"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_picture"
        android:layout_width="@dimen/list_picture_size"
        android:layout_height="@dimen/list_picture_size"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:background="@drawable/rounded_image_white_bkg"
        android:contentDescription="@string/user_profile_picture"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_user_picture" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.ListPrimaryItem" />

        <TextView
            android:id="@+id/user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.ListSecondaryItem" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/button_accept_pending"
        android:layout_width="@dimen/standard_image_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:src="@drawable/ic_accept_36dp"
        android:contentDescription="@string/refuse" />

    <ImageButton
        android:id="@+id/button_refuse_pending"
        android:layout_width="@dimen/standard_image_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:src="@drawable/ic_refuse_36dp"
        android:contentDescription="@string/accept" />

</LinearLayout>